Changes for Spark